--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,10 @@
 {
-    "python.analysis.typeCheckingMode": "strict",
-    "python.analysis.autoImportCompletions": true
+    "[python]": {
+      "analysis.typeCheckingMode": "strict",
+      "analysis.autoImportCompletions": true,
+      "editor.codeActionsOnSave": {
+        "source.fixAll.ruff": "explicit",
+        "source.organizeImports.ruff": "explicit",
+      }
+    }
 }
